# AutoThematicThesaurus

./: .gitignore  CMakeLists.txt  README.md  active_learning_candidates.xlsx  filtered_data.xlsx  manage_memory.sh  result.txt  terms.txt
cmake/: FindICU.cmake  icu.cmake
core/: functions.py  paths.py
hypernym_hyponym_analysis/: head_noun_wikiwordnet_ruwordnet.py
hyponym_hyponym_analysis/: extract_relations_by_triggers.json  extract_relations_by_triggers.py  hypernym_voting_fasttext.py  nli_hypernym_relations.json  nli_hypernym_relations.py
my_data/: bad_artticles.txt  check_encoding.sh  collected_links.txt  low_tfidf_phrases.txt  low_tfidf_phrases_manual_check.txt  patterns  patterns.txt  stop_words  stop_words.txt  total_results.txt  total_results_no_sw.json  total_results_no_sw.txt  total_results_sw.txt
my_data/additional_analysis_of_prepositions/: list_1.txt  list_10.txt  list_2.txt  list_3.txt  list_4.txt  list_5.txt  list_6.txt  list_7.txt  list_8.txt  list_9.txt  patternsTEST.txt  sample.txt  script.py
my_data/nlp_corpus/: grouped_phrases.json  tags_and_hubs_line_counts.txt
my_data/texts/: art325014_hubs.txt  art325014_tags.txt  art325014_text.txt  art326380_text.txt  art329410_text.txt  art339954_text.txt  art341240_text.txt  art346578_text.txt  art346578_title.txt  art346618_text.txt  art346618_title.txt  art347496_text.txt  art347524_hubs.txt  art347524_text.txt  art349404_hubs.txt  art349404_text.txt  art352614_hubs.txt  art352614_text.txt  art417167_hubs.txt  art417167_text.txt  art417167_title.txt  art423569_tags.txt  art423569_title.txt  art424465_text.txt  art424465_title.txt  art425507_text.txt  art425507_title.txt  art433070_text.txt  art436878_text.txt  art436878_title.txt  art438940_text.txt  art440564_text.txt  art463683_hubs.txt  art463683_tags.txt  art463683_text.txt  art463683_title.txt  art478790_hubs.txt  art478790_text.txt  art478790_title.txt  art486158_text.txt  (+579 more)
one_word_terms/: augment_terms.py  clean_one_word.py  collect_one_word_terms.py  one_word_terms.xlsx  one_word_terms_cleaned.xlsx  terms_to_json.py
relations/: detect_antonyms.py  find_hyp_mistakes.py  find_syn_mistakes.py  fix_term_relations.py  marked_relations.json  marked_relations_manual.json  relation_classifier.py  remove_self_referencing_phrases.py  set_manual_relation.py
relations/hypernym_hyponym_analysis/: analyze_nli_results copy.py  analyze_voting_results.py  evaluate_hypernym_voting.py  evaluate_nli.py  extract_relations_by_triggers.py  head_noun_wikiwordnet_ruwordnet.py  head_nouns.json  head_nouns_filter.py  head_nouns_filtered.json  hypernym_voting_fasttext.py  nli_hypernym_relations.json  nli_hypernym_relations.py
relations/synonyms_analysis/: analyze_synonyms.py  create_synonyms_mask_deep_pavlov.py  create_synonyms_rut5_base_paraphraser.py  create_synonyms_sbert.py  evaluate_synonyms.py  evaluate_usage.py  filter_mask_deep_pavlov_results.py  filter_rut5_results.py  find_usage_variants.py  merge.py  merge_synonyms.py  synonym_counts_comparison.xlsx  synonym_overlap.xlsx  synonyms_rut5_base_paraphraser.json  usage_variants.json
res/: res.txt  res1.txt  res_art325014_text.json  res_art325014_text.txt  res_art326380_text.json  res_art326380_text.txt  res_art329410_text.json  res_art329410_text.txt  res_art339954_text.json  res_art339954_text.txt  res_art341240_text.json  res_art341240_text.txt  res_art346578_text.json  res_art346578_text.txt  res_art346618_text.json  res_art346618_text.txt  res_art347496_text.json  res_art347496_text.txt  res_art347524_text.json  res_art347524_text.txt  res_art349404_text.json  res_art349404_text.txt  res_art352614_text.json  res_art352614_text.txt  res_art417167_text.json  res_art417167_text.txt  res_art424465_text.json  res_art424465_text.txt  res_art425507_text.json  res_art425507_text.txt  res_art433070_text.json  res_art433070_text.txt  res_art436878_text.json  res_art436878_text.txt  res_art438940_text.json  res_art438940_text.txt  res_art440564_text.json  res_art440564_text.txt  res_art463683_text.json  res_art463683_text.txt  (+586 more)
scripts/: bin_to_vec.py  calculate_inverse_rarity.py  clean_filtered_data.py  collect_links.py  delete_not_match.py  delete_startswith.py  ensure_mutual_synonyms.py  fasttext_finetune.py  filter_data.py  find_synonyms.py  generate_oof_predictions.py  grouped_phrases.py  json_to_csv.py  lemmas_search_tool.py  ling_terms_dict.py  low_tf-idf_phrases_finder.py  merge_is_term_manual.py  merge_ralations.py  merge_senteces_and_phrases.py  prepare_text_data.py  term_prediction.py  unique_lines_processor.py  zero_shot_term_classifier_with_translation.py
scripts/analyze_data/: analyze_oof_performance.py  analyze_term_distribution.py  categorical_feature_analysis.py  categorical_features_pivot.py  context_length_vs_is_term_manual.py  embedding_feature_analysis.py  numeric_feature_correlation_analysis.py  plot_is_term_manual_relationships.py  quantitative_feature_analysis.py
scripts/core/: functions.py  (+1 more)
src/: ComplexPhrasesCollector.cpp  ComplexPhrasesCollector.h  Component.h  GrammarComponent.cpp  GrammarComponent.h  GrammarCondition.cpp  GrammarCondition.h  GrammarPatternManager.cpp  GrammarPatternManager.h  Logger.cpp  Logger.h  ModelComponent.cpp  ModelComponent.h  OutputRedirector.h  PatternParser.cpp  PatternParser.h  PatternPhrasesStorage.cpp  PatternPhrasesStorage.h  PhrasesCollectorUtils.cpp  PhrasesCollectorUtils.h  SimplePhrasesCollector.cpp  SimplePhrasesCollector.h  TermProposalStorage.cpp  TermProposalStorage.h  TermsStorage.cpp  TermsStorage.h  TextCorpus.h  ThreadController.h  WordComponent.cpp  WordComponent.h  main.cpp
synonyms_analysis/: create_synonyms_mask_deep_pavlov.py  create_synonyms_rut5_base_paraphraser.py  synonyms_rut5_base_paraphraser.json
thesaurus/: clean_relations.py  data.xlsx  enrich_data_with_one_word_terms.py  enrich_relitions_with_one_word_terms.py  generate_context_pages.py  generate_index.py  get_statistics.py  make_symmetric.py  merge_with_not_related.py  style.css
utils/: .gitignore  collect_texts.py  extracted_uppercase_words.txt  prepare_text_data.py
(+912 files in other folders)
